Qa59698 build uqds builder (#629)
* updated package name

* updated preview publish

* update packages name

* update pacakge-lcok

* fix to preview workflow

* updates to stage and prod

* naming update

* updated Regression test prefix

* updated paths

* updated homepage links

* updated reference links

* fixed broken reference

* updated site search

* updated page title

* updated links

* missed releases ref

* updated package lock

--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>UQ UQDS Example</title>
+  <title>UQ Design System</title>
   <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
   <link href="favicon.ico" type="image/x-icon" rel="icon" />
   <link rel="stylesheet" type="text/css"
@@ -56,10 +56,10 @@
           <a class="global-mobile-nav__audience-link slide-menu__control" href="#" data-gtm-label="Study">Build using the Design System</a>
           <ul>
             <li>
-              <a href="/storybook-html/" data-gtm-label="HTML, CSS, JS components">HTML, CSS, JS components</a>
+              <a href="storybook-html/index.html" data-gtm-label="HTML, CSS, JS components">HTML, CSS, JS components</a>
             </li>
             <li>
-              <a href="/storybook-react/" data-gtm-label="REACT component library">REACT component library</a>
+              <a href="storybook-react/index.html" data-gtm-label="REACT component library">REACT component library</a>
             </li>
             <li>
               <a href="https://www.figma.com/design/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?m=auto&t=Qv6W7wBqvGj5S1EZ-6" data-gtm-label="FIGMA component library">FIGMA component library</a>
@@ -130,9 +130,9 @@
             </div>
             <div class="uq-header__search-range">
               <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch"
-                value="https://future-students.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
+                value="https://design-system.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
               <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website
-                (future-students.uq.edu.au)</label>
+                (design-system.uq.edu.au)</label>
             </div>
           </fieldset>
         </form>
@@ -163,21 +163,18 @@
   </header>
 
   <!-- Content -->
-  <div class="uq-hero uq-hero--large">
-
-    <div class="uq-hero__image">
-      <img src="images/hero/hero-home.jpg" alt="" role="presentation">
-    </div>
+  <div class="uq-hero">
     <div class="uq-container">
       <div class="uq-hero__content">
         <h1 class="uq-hero__title">Design System</h1>
         <div class="uq-hero__description">
           <p>Styles, components, patterns and standards.</p>
         </div>
-
       </div>
     </div>
   </div>
+
+  
 
   <section class="uq-section">
     <div class="uq-container">
@@ -221,7 +218,7 @@
           <div class="uq-card__content">
 
 
-            <h3 class="uq-card__title"><a href="/storybook-html/">HTML, CSS, JS component library</a></h3>
+            <h3 class="uq-card__title"><a href="storybook-html/index.html">HTML, CSS, JS component library</a></h3>
             <div class="uq-card__description">Styles, components, patterns and standards.</div>
 
           </div>
@@ -232,7 +229,7 @@
           <div class="uq-card__content">
 
 
-            <h3 class="uq-card__title"><a href="/storybook-react/">REACT component library</a></h3>
+            <h3 class="uq-card__title"><a href="storybook-react/index.html">REACT component library</a></h3>
             <div class="uq-card__description">React is a JavaScript library primarily used for building user interfaces (UIs) for web applications and mobile apps</div>
 
           </div>
