--- a/packages/uqds-builder/src/homepage.html
+++ b/packages/uqds-builder/src/homepage.html
@@ -443,7 +443,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <a href="#" title="Link" class="uq-button--inline">Link</a>
         </div>
-        <button class="uq-alert__close">Close</button>
+        <button class="uq-alert__close">Close alert</button>
       </div>
     </div>
     
@@ -687,12 +687,12 @@
     <div class="uq-footer__contact">   
       <nav class="uq-footer__contact-item" aria-label="Social Media" data-gtm-category="Social share link">
         <ul class="uq-footer__footer-list uq-footer__contact-social"> 
-          <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Follow us on Facebook" data-gtm-label="Follow us on Facebook"></a></li> 
-          <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/school/university-of-queensland" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="Follow us on linkedin" data-gtm-label="Follow us on Linkedin"></a></li> 
-          <li class="uq-footer__footer-item"><a href="https://x.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Follow us on X" data-gtm-label="Follow us on X"></a></li>
-          <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Follow us on Youtube" data-gtm-label="Follow us on Youtube"></a></li>
-          <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Follow us on Instagram" data-gtm-label="Follow us on Instagram"></a></li>
-          <li class="uq-footer__footer-item"><a href="https://www.tiktok.com/@uniofqld" class="uq-footer__meta-icons--tiktok uq-footer__meta-icons" aria-label="Follow us on TikTok" data-gtm-label="Follow us on TikTok"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons" aria-label="Follow us on Facebook" data-gtm-label="Facebook"></a></li> 
+          <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/school/university-of-queensland" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="Follow us on LinkedIn" data-gtm-label="LinkedIn"></a></li> 
+          <li class="uq-footer__footer-item"><a href="https://x.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Follow us on X" data-gtm-label="X"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Follow us on Youtube" data-gtm-label="Youtube"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Follow us on Instagram" data-gtm-label="Instagram"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://www.tiktok.com/@uniofqld" class="uq-footer__meta-icons--tiktok uq-footer__meta-icons" aria-label="Follow us on TikTok" data-gtm-label="TikTok"></a></li>
         </ul>
       </nav> 
       <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
