fix: ABN Examples

--- a/packages/uqds-builder/src/homepage.html
+++ b/packages/uqds-builder/src/homepage.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir="ltr">
   <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <title>UQ UQDS Example</title>
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
     <link href="favicon.ico" type="image/x-icon" rel="icon" />
