--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="format-detection" content="telephone=no">
   <title>UQ Design System</title>
   <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
   <link href="favicon.ico" type="image/x-icon" rel="icon" />
