fix: removed dash

--- a/packages/uqds-builder/src/example.html
+++ b/packages/uqds-builder/src/example.html
@@ -611,7 +611,7 @@
     <footer class="uq-footer" data-gtm-category="Footer">
       <div  class="uq-footer__reconciliation">
         <div class="uq-footer__acknowledgement">
-              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &ndash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation statement</a>
+              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation statement</a>
         </div>
       </div>
       <div class="uq-footer__container">
