--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -601,7 +601,7 @@
           src="https://static.uq.net.au/v15/images/rap/aboriginal.svg" /> <img class="uq-footer__acknowledgement-flag"
           alt="Torres Strait Islander Flag" src="https://static.uq.net.au/v15/images/rap/torres-strait-islanders.svg" />
         <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of
-          the lands on which UQ is situated. &ndash; <a href="https://about.uq.edu.au/reconciliation"
+          the lands on which UQ is situated. <a href="https://about.uq.edu.au/reconciliation"
             class="uq-footer__link">Reconciliation at UQ</a></span>
       </div>
     </div>
