--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="format-detection" content="telephone=no">
   <title>UQ Design System</title>
   <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
   <link href="favicon.ico" type="image/x-icon" rel="icon" />
@@ -843,18 +842,14 @@
 
       </div>
       <nav class="uq-footer__meta" aria-label="Business meta">
-        <ul class="uq-footer__footer-list">
-          <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
-          <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
-          <li class="uq-footer__footer-item"><abbr
-              title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a
-              class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external"
-              data-gtm-label="CRICOS 00025B">00025B</a></li>
-          <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>:
-            <a class="uq-footer__link" href="https://www.uq.edu.au/about/teqsa-link" rel="external"
-              data-gtm-label="TEQSA PRV12080">PRV12080</a>
-          </li>
-        </ul>
+      <ul  class="uq-footer__footer-list">
+        <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
+        <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
+        <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: <dd>63 942 912 684</dd></li>
+        <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: <a class="uq-footer__link" href="https://abr.business.gov.au/ABN/View?id=63942912684" rel="external" data-gtm-label="ABN">63 942 912 684</a> </li>
+        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
+      </ul>
       </nav>
       <nav class="uq-footer__footer" aria-label="Terms and conditions">
         <ul class="uq-footer__footer-list">
