--- a/packages/uqds-builder/src/homepage.html
+++ b/packages/uqds-builder/src/homepage.html
@@ -443,7 +443,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           <a href="#" title="Link" class="uq-button--inline">Link</a>
         </div>
-        <button class="uq-alert__close">Close alert</button>
+        <button class="uq-alert__close">close</button>
       </div>
     </div>
     
