--- a/packages/uqds-builder/src/interim.html
+++ b/packages/uqds-builder/src/interim.html
@@ -16,7 +16,7 @@
           <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
         </div>
         <div class="uq-header__logo" data-gtm-category="Primary header">
-          <a class="logo--large" href="https://www.uq.edu.au" data-gtm-label="UQ Logo">
+          <a class="logo--large" href="https://uq.edu.au" data-gtm-label="UQ Logo">
             <img alt="The University of Queensland" src="https://static.uq.net.au/v15/logos/corporate/uq-logo--reversed.svg">
           </a>
         </div>        
@@ -115,7 +115,7 @@
                 <a href="/admissions/doctor-medicine" data-gtm-label="Admissions > Doctor of Medicine">Doctor of Medicine</a>
               </li>
               <li>
-                <a href="https://www.uq.edu.au/studyabroad/how-to-apply" data-gtm-label="Admissions > Study abroad and incoming exchange">Study abroad and incoming exchange</a>
+                <a href="https://uq.edu.au/studyabroad/how-to-apply" data-gtm-label="Admissions > Study abroad and incoming exchange">Study abroad and incoming exchange</a>
               </li>
             </ul>
           </li>
@@ -161,13 +161,13 @@
             <a class="uq-header__newglobal-nav-link" href="https://about.uq.edu.au">About</a>
           </li>
           <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-            <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au">UQ home</a>
+            <a class="uq-header__nav-secondary-link" href="https://uq.edu.au">UQ home</a>
           </li>
           <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-            <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/news">News</a>
+            <a class="uq-header__nav-secondary-link" href="https://news.uq.edu.au">News</a>
           </li>
           <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-            <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/uq-events">Events</a>
+            <a class="uq-header__nav-secondary-link" href="https://uq.edu.au/uq-events">Events</a>
           </li>
           <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
             <a class="uq-header__nav-secondary-link" href="https://alumni.uq.edu.au/giving">Give</a>
@@ -204,13 +204,13 @@
         <nav class="uq-header__nav-secondary-container">
           <ul class="uq-header__nav-secondary-list">
               <li class="uq-header__nav-secondary-item">
-                 <a href="https://www.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
+                 <a href="https://uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://www.uq.edu.au/news" rel="external" class="uq-header__nav-secondary-link">News</a>
+                  <a href="https://news.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">News</a>
               </li>
               <li class="uq-header__nav-secondary-item">
-                  <a href="https://www.uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
+                  <a href="https://uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
               </li>
               <li class="uq-header__nav-secondary-item">
                   <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
@@ -318,7 +318,7 @@
                   <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
                 </li>
                 <li class="uq-site-header__navigation__list-item">
-                  <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
+                  <a href="https://uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
                 </li>
               </ul>
             </li>
@@ -384,7 +384,7 @@
   <div class="uq-acknowledgement uq-acknowledgement--large">
     <div class="uq-acknowledgement__content">
       <div class="uq-acknowledgement__text">
-        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
+        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/strategy-values/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
       </div>
     </div>
   </div>
@@ -395,27 +395,27 @@
           <h2 class="uq-footer__navigation-title">Media</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
         <li class="uq-footer__navigation-item">
-          <h2 class="uq-footer__navigation-title">Working at UQ</h2>
+          <h2 class="uq-footer__navigation-title">Working with us</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
+              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
@@ -435,7 +435,7 @@
               <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Academic calendar</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -469,16 +469,16 @@
               <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
+              <a href="https://uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
             </li>
           </ul>
         </li>
@@ -492,27 +492,27 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contacts" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working with us</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
+              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
@@ -532,7 +532,7 @@
               <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Academic calendar</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -569,13 +569,13 @@
               <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
             </li>
           </ul>
         </li>
@@ -600,14 +600,14 @@
       <ul  class="uq-footer__footer-list">
         <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
         <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
-        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
-        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://about.uq.edu.au/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://about.uq.edu.au/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
       </ul>
     </nav>
     <nav class="uq-footer__footer" aria-label="Terms and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/legal/copyright-privacy-disclaimer/" class="uq-footer__link">Copyright, privacy and disclaimer</a>
+              <a href="https://uq.edu.au/legal/copyright-privacy-disclaimer" class="uq-footer__link">Copyright, privacy and disclaimer</a>
           </li>
           <li class="uq-footer__footer-item">
             <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
