--- a/packages/storybook-html/stories/deprecated/footer-legacy/footer.html
+++ b/packages/storybook-html/stories/deprecated/footer-legacy/footer.html
@@ -14,7 +14,7 @@
         </div>
         <div class="legacy-footer__meta">
           <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
-          <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="legacy-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a>
+          <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="legacy-footer__link cricos__link" href="https://about.uq.edu.au/cricos-link" rel="external">00025B</a>
         </div>
       </div>
       <div class="legacy-footer__column">
@@ -30,10 +30,10 @@
           <div class="legacy-footer__footer-menu">
             <ul class="legacy-footer__footer-menu__list">
               <li class="legacy-footer__footer-menu__item">
-                <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="legacy-footer__footer-menu__link">Privacy &amp; Terms of use</a>
+                <a href="https://uq.edu.au/terms-of-use/" rel="external" class="legacy-footer__footer-menu__link">Privacy &amp; Terms of use</a>
               </li>
               <li class="legacy-footer__footer-menu__item">
-                <a href="https://www.uq.edu.au/rti/" rel="external" class="legacy-footer__footer-menu__link">Right to Information</a>
+                <a href="https://uq.edu.au/rti/" rel="external" class="legacy-footer__footer-menu__link">Right to Information</a>
               </li>
               <li class="legacy-footer__footer-menu__item">
                 <a href="https://uq.edu.au/accessibility/" rel="external" class="legacy-footer__footer-menu__link">Accessibility</a>
