--- a/packages/uqds-builder/src/homepage.html
+++ b/packages/uqds-builder/src/homepage.html
@@ -191,7 +191,7 @@
                     <div class="megamenu__menu">
                       <ul>
                         <li><a href="https://campuses.uq.edu.au" data-gtm-label="About > Our campuses">Our campuses</a></li>
-                        <li><a href="https://my.uq.edu.au/student-support/accommodation" data-gtm-label="About > Parking and transport">Parking and transport</a></li>
+                        <li><a href="https://campuses.uq.edu.au/information-and-services/parking-transport" data-gtm-label="About > Parking and transport">Parking and transport</a></li>
                         <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="About > Facilities and services">Facilities and services</a></li>
                         <li><a href="https://about.uq.edu.au/venues" data-gtm-label="About > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
                       </ul>
@@ -369,7 +369,7 @@
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Campuses and facilities</a>
             <ul>
               <li><a href="https://campuses.uq.edu.au" data-gtm-label="About > Our campuses">Our campuses</a></li>
-              <li><a href="https://my.uq.edu.au/student-support/accommodation" data-gtm-label="About > Parking and transport">Parking and transport</a></li>
+              <li><a href="https://campuses.uq.edu.au/information-and-services/parking-transport" data-gtm-label="About > Parking and transport">Parking and transport</a></li>
               <li><a href="https://campuses.uq.edu.au/information-and-services/shops" data-gtm-label="About > Facilities and services">Facilities and services</a></li>
               <li><a href="https://about.uq.edu.au/venues" data-gtm-label="About > Venue hire and event spaces​">Venue hire and event spaces​</a></li>
             </ul>
