--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -689,7 +689,7 @@
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
@@ -786,7 +786,7 @@
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
