Library link update

--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -663,7 +663,7 @@
           <h2 class="uq-footer__navigation-title">Library</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
+              <a href="https://library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
@@ -760,7 +760,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
+              <a href="https://library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
