--- a/packages/uqds-builder/src/interim.html
+++ b/packages/uqds-builder/src/interim.html
@@ -395,7 +395,7 @@
           <h2 class="uq-footer__navigation-title">Media</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://news.uq.edu.au/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
@@ -492,7 +492,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://news.uq.edu.au/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
