--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -20,7 +20,7 @@
           data-target="global-mobile-nav" data-action="toggle" data-gtm-action="Toggle">Menu</button>
       </div>
       <div class="uq-header__logo" data-gtm-category="Primary header">
-        <a class="logo--large" href="https://www.uq.edu.au" data-gtm-label="UQ Logo">
+        <a class="logo--large" href="https://uq.edu.au" data-gtm-label="UQ Logo">
           <img alt="The University of Queensland"
             src="https://static.uq.net.au/v15/logos/corporate/uq-logo--reversed.svg">
         </a>
@@ -95,13 +95,13 @@
           <a class="uq-header__newglobal-nav-link" href="https://about.uq.edu.au">About</a>
         </li>
         <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-          <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au">UQ home</a>
+          <a class="uq-header__nav-secondary-link" href="https://uq.edu.au">UQ home</a>
         </li>
         <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-          <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/news">News</a>
+          <a class="uq-header__nav-secondary-link" href="https://news.uq.edu.au">News</a>
         </li>
         <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-          <a class="uq-header__nav-secondary-link" href="https://www.uq.edu.au/uq-events">Events</a>
+          <a class="uq-header__nav-secondary-link" href="https://uq.edu.au/uq-events">Events</a>
         </li>
         <li class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
           <a class="uq-header__nav-secondary-link" href="https://alumni.uq.edu.au/giving">Give</a>
@@ -113,7 +113,7 @@
     </nav>
     <div class="uq-header__search" data-gtm-category="Search">
       <div class="uq-header__search-container">
-        <form action="https://search.uq.edu.au" method="get" data-gtm-action="Text search" data-gtm-form-action>
+        <form action="https://search.uq.edu.au/" method="get" data-gtm-action="Text search" data-gtm-form-action>
           <fieldset>
             <div class="uq-header__search-query">
               <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
@@ -142,13 +142,13 @@
       <nav class="uq-header__nav-secondary-container">
         <ul class="uq-header__nav-secondary-list">
           <li class="uq-header__nav-secondary-item">
-            <a href="https://www.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
+            <a href="https://uq.edu.au" rel="external" class="uq-header__nav-secondary-link">UQ home</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-            <a href="https://www.uq.edu.au/news" rel="external" class="uq-header__nav-secondary-link">News</a>
+            <a href="https://news.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">News</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-            <a href="https://www.uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
+            <a href="https://uq.edu.au/uq-events" rel="external" class="uq-header__nav-secondary-link">Events</a>
           </li>
           <li class="uq-header__nav-secondary-item">
             <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
@@ -598,7 +598,7 @@
   <div  class="uq-acknowledgement uq-acknowledgement--large">
     <div class="uq-acknowledgement__content">
       <div class="uq-acknowledgement__text">
-        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
+        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. <a href="https://about.uq.edu.au/strategy-values/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
       </div>
     </div>
   </div>
@@ -609,27 +609,27 @@
           <h2 class="uq-footer__navigation-title">Media</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
         <li class="uq-footer__navigation-item">
-          <h2 class="uq-footer__navigation-title">Working at UQ</h2>
+          <h2 class="uq-footer__navigation-title">Working with us</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
+              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
@@ -649,7 +649,7 @@
               <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Academic calendar</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -663,7 +663,7 @@
           <h2 class="uq-footer__navigation-title">Library</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
+              <a href="https://library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
@@ -683,16 +683,16 @@
               <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
+              <a href="https://uq.edu.au/complaints-appeals" class="uq-footer__navigation-link">Make a complaint</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
             </li>
           </ul>
         </li>
@@ -706,27 +706,27 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Media</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
+              <a href="https://news.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://news.uq.edu.au" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
         <li class="uq-accordion__item uq-footer__navigation-item">
-          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
+          <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working with us</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
+              <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers and job search</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
+              <a href="https://about.uq.edu.au/strategy-values/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://staff.uq.edu.au/information-and-services/health-safety-wellbeing" class="uq-footer__navigation-link">Staff support</a>
@@ -746,7 +746,7 @@
               <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
+              <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Academic calendar</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -760,7 +760,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
+              <a href="https://library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
@@ -783,13 +783,13 @@
               <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
+              <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find an expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Our campuses</a>
             </li>
           </ul>
         </li>
@@ -814,14 +814,14 @@
       <ul  class="uq-footer__footer-list">
         <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
         <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: <a class="uq-footer__link" href="https://abr.business.gov.au/ABN/View?id=63942912684" rel="external" data-gtm-label="ABN 63 942 912 684">63 942 912 684</a></li>
-        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
-        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://www.uq.edu.au/about/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>: <a class="uq-footer__link" href="https://about.uq.edu.au/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
+        <li class="uq-footer__footer-item"><abbr title="Tertiary Education Quality and Standards Agency">TEQSA</abbr>: <a class="uq-footer__link" href="https://about.uq.edu.au/teqsa-link" rel="external" data-gtm-label="TEQSA PRV12080">PRV12080</a></li>
       </ul>
     </nav>
     <nav class="uq-footer__footer" aria-label="Terms and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/legal/copyright-privacy-disclaimer/" class="uq-footer__link">Copyright, privacy and disclaimer</a>
+              <a href="https://uq.edu.au/legal/copyright-privacy-disclaimer" class="uq-footer__link">Copyright, privacy and disclaimer</a>
           </li>
           <li class="uq-footer__footer-item">
             <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
