fix: typo in footer

--- a/packages/uqds-builder/src/homepage.html
+++ b/packages/uqds-builder/src/homepage.html
@@ -713,7 +713,7 @@
             <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
           </li>
           <li class="uq-footer__footer-item">
-              <a href="https://governance-risk.uq.edu.au/rtip" class="uq-footer__link">Right to information</a>
+              <a href="https://governance-risk.uq.edu.au/rti" class="uq-footer__link">Right to information</a>
           </li>
           <li class="uq-footer__footer-menu__item">
             <a href="https://my.uq.edu.au/feedback?r=https://uq.edu.au" class="uq-footer__link">Feedback</a>
